# autonomous-agent

./: .coveragerc  .gitignore  AUTHENTICATION_SYSTEM_IMPLEMENTATION.md  CLAUDE.md  CODE_AGENT_IMPLEMENTATION.md  DOCKER_SECURITY_IMPLEMENTATION.md  Dockerfile  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTELLIGENCE_LAYER_COMPLETION.md  Makefile  POSTGRESQL_INTEGRATION_SUMMARY.md  PRODUCTION_DEPLOYMENT_SUMMARY.md  README.md  RESEARCH_AGENT_IMPLEMENTATION.md  demo.py  demo_code_agent.py  demo_gmail_agent.py  demo_research_agent.py  docker-compose.prod.yml  docker-compose.yml  project-manifest.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: dependency-update.yml  release.yml  test.yml
config/: auth_config.yaml  base.yml  code_agent_config.yaml  gmail_example.yaml  research_agent_config.yaml  sample_ollama_config.yaml
config/development/: app.yml
config/monitoring/: alertmanager.yml  grafana-dashboards.json  prometheus.yml
config/monitoring/rules/: alerts.yml
config/production/: app.yml
config/staging/: app.yml
config/templates/: docker-compose.template.yml  nginx.conf  production.env
docker/nginx/: nginx.conf
docker/postgres/: init.sql
docker/prometheus/: prometheus.prod.yml  prometheus.yml
docker/redis/: redis.conf  redis.prod.conf
docs/: ARCHITECTURE.md  GMAIL_AGENT.md  IMPLEMENTATION_PLAN.md  PHASE_2_SUMMARY.md  PHASE_3_SUMMARY.md  PHASE_4_FINAL_SUMMARY.md
docs/api/: README.md
docs/guides/: admin-guide.md  user-guide.md
docs/runbooks/: operations.md
examples/: auth_integration_example.py  intelligence_integration_example.py
k8s/base/: app.yaml  configmap.yaml  kustomization.yaml  monitoring.yaml  namespace.yaml  network-policies.yaml  nginx.yaml  ollama.yaml  postgres.yaml  rbac.yaml  redis.yaml  secrets.yaml
k8s/overlays/production/: ingress.yaml  kustomization.yaml
scripts/: backup-restore.sh  generate-secrets.sh  security-scan.sh  setup.sh
scripts/production/: deploy.sh  disaster-recovery.sh  health-check.sh  rollback.sh
scripts/security/: compliance-check.sh
scripts/testing/: production-test.sh
src/: __init__.py  main.py
src/agents/: __init__.py  base.py  code_agent.py  exceptions.py  gmail_agent.py  gmail_agent_enhanced.py  manager.py  research.py
src/api/: auth_routes.py
src/communication/: __init__.py  broker.py  protocol.py
src/config/: __init__.py  environment.py  exceptions.py  manager.py
src/core/: __init__.py  base.py  exceptions.py
src/database/: __init__.py  connection.py
src/database/management/: __init__.py  search.py
src/database/migrations/: __init__.py  manager.py
src/database/models/: __init__.py  agents.py  base.py  emails.py  research.py  users.py
src/database/operations/: __init__.py  base.py  emails.py
src/interfaces/: __init__.py
src/lifecycle/: __init__.py  hooks.py  manager.py  monitor.py
src/logging/: __init__.py  handlers.py  manager.py
src/models/: __init__.py  code_agent_models.py
src/monitoring/: __init__.py  health.py  logger.py  metrics.py
src/security/: __init__.py  auth.py  middleware.py  rate_limiting.py  validation.py
src/services/: __init__.py  agent_coordinator.py  ai_cache.py  ai_code_analyzer.py  ai_processing.py  auth_service.py  github_service.py  intelligence_engine.py  learning_system.py  mfa_service.py  oauth_service.py  ollama_service.py  security_monitoring_service.py  service_manager.py  task_planner.py  user_management_service.py
src/utils/: __init__.py
tests/: __init__.py  conftest.py  test_agent_manager.py  test_ai_code_analyzer.py  test_auth_system.py  test_base_agent.py  test_code_agent.py  test_communication.py  test_communication_broker_comprehensive.py  test_config.py  test_coverage_boost.py  test_database_operations.py  test_github_service.py  test_gmail_agent.py  test_lifecycle.py  test_lifecycle_hooks_comprehensive.py  test_lifecycle_monitor_comprehensive.py  test_logging.py  test_logging_handlers_comprehensive.py  test_logging_manager_focused.py  test_main.py  test_modules_init.py  test_research_agent.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  conftest.py  test_app_integration.py  test_gmail_agent_integration.py  test_sample_integration.py
tests/mocks/: __init__.py  github_mocks.py  gmail_mocks.py  intelligence_mocks.py  ollama_mocks.py  research_mocks.py
tests/unit/: __init__.py  test_sample_agent.py
tests/unit/agents/: __init__.py
tests/unit/core/: __init__.py  test_base.py  test_exceptions.py
tests/unit/services/: test_decision_maker.py  test_intelligence_engine.py  test_ollama_service.py  test_task_planner.py
tests/utils/: __init__.py  assertions.py  test_helpers.py
